# fastapi-rag-v2

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py  schemas.py  settings.py
app/api/: routes.py
app/rag/: __init__.py  chunking.py  embeddings.py  ingest_folder.py  llm.py  service.py  vector_store.py
app/scripts/: __init__.py  ingest_folder.py
docs/superpowers/plans/: 2026-06-18-fastapi-rag-v2-teaching-plan.md  2026-06-21-sqlite-vector-store.md  2026-06-22-ingest-folder.md  2026-06-22-openai-provider-mode.md
docs/superpowers/specs/: 2026-06-18-fastapi-rag-v2-design.md  2026-06-21-sqlite-vector-store-design.md  2026-06-22-ingest-folder-design.md  2026-06-22-openai-provider-mode-design.md
tests/: conftest.py  test_ingest_folder.py  test_openai_providers.py  test_rag_flow.py  test_rag_units.py  test_settings.py
