[project]
name = "fastapi-rag-v2"
version = "0.1.0"
description = "A step-by-step FastAPI and RAG learning project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
